--- a/Código/reservar-mesa/index.html
+++ b/Código/reservar-mesa/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilo/style.css">
   </head>
   <body>
-    <body class="title">
+    <body >
     
     <div id="root">
 
